Fix Firefox downloaded cv font stretch
Force specific font family on the preview document component

--- a/src/scss/components/_preview.scss
+++ b/src/scss/components/_preview.scss
@@ -7,6 +7,7 @@
   width: 100%;
 
   &-download {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     position: fixed;
     right: -100%;
   }
